tests/th/TH_NestedSplicesFail1.stderr
TH_NestedSplicesFail1.hs:4:11: error: [GHC-45108]
    • Typed splices may not appear in untyped brackets.
    • In the typed Template Haskell splice: $$x
      In the Template Haskell quotation: [| $$x |]

